<resources>
    <string name="app_name">Nithya Panchangam</string>
    <string name="nithya_panchangam_header">
        "Nithya Panchangam"
    </string>
    <string name="sankalpam_limitation_india_only">**** INDIA ONLY ****</string>
    <string name="sankalpam_shubam_begin_part1">"Mamo patha, samastha duritha kshayadwara Shri Parameshwara preethyartham shubhe shobhane muhoorthe adhyabrahmanaha dwithiya-parardhe shwetha varaha kalpe vaivasvatha manvanthare ashta vimshathi thame kaliyuge prathame pade "</string>
    <string name="sankalpam_shubam_begin_part2">"jambudweepe bhaaratha varshe bharatha khande meroho dakshine parshwe "</string>
    <string name="sankalpam_shubam_begin_part3">shakabdhe asmin varthamane vyavahaarike prabhavadhinaam shashtyaaha samvatsaranaam madhye</string>
    <string name="sankalpam_shubam_begin_part2_north_america">kraunchadweepe, ramanaka varshe, aindra khande, meroho pashchime parshwa digbhage</string>
    <string name="sankalpam_shubam_begin_part2_oceania">kushadweepe, ramanaka varshe, aindra khande, meroho pashchime parshwa digbhage</string>
    <string name="sankalpam_shubam_begin_part2_australia">shalmalidweepe, ramanaka varshe, aindra khande, meroho pashchime parshwa digbhage</string>
    <string name="sankalpam_shubam_begin_part2_africa">pushkaradweepe, ramanaka varshe, aindra khande, meroho pashchime parshwa digbhage</string>
    <string name="sankalpam_shubam_begin_part2_south_america">plaskadweepe, ramanaka varshe, aindra khande, meroho pashchime parshwa digbhage</string>
    <string name="sankalpam_shubam_begin_part2_europe">shakadweepe, ramanaka varshe, aindra khande, meroho pashchime parshwa digbhage</string>
    <string name="sankalpam_punya_thithou">punya thithou</string>
    <string name="sankalpam_srardham_begin_part1">"Mamo patha, samastha duritha kshyadwara Shri Parameshwara preethyartham, apavithra pavithrova sarvavastham gathopiva | yassmareth pundarikaksham sa baahyaa abhyantharaha suchihi || maanasam vaachikam paapam karmanaa samupaarjitham | Shri Rama smaranenaiva vyapohathi na samshayaha ||  Shri Rama Rama Rama | Thithirvishnuhu thathaa vaaraha nakshathram Vishnu revacha | yogashcha karanam chaiva sarvam Vishnu mayam Jagat || Shri Govinda Govinda Govinda || Adya Shri Bhagavathaha maha purushasya Vishnoho aajnayaa pravarthamaanasya adya brahmanaha dwithiya paraardhe shwetha varaha kalpe vaivasvatha manvanthare ashtaavimshathi thame kaliyuge prathame pade "</string>
    <string name="sankalpam_srardham_begin_part2">"jambudweepe bhaaratha varshe bharatha khande meroho dakshine parshwe "</string>
    <string name="sankalpam_srardham_begin_part3">shakabde asmin varthamane vyavahaarike prabhavadinaam shashtyaaha samvatsaranaam madhye</string>
    <string name="sankalpam_srardham_end_1">Vishnu yoga Vishnu karana evam guna visheshana vishishtayaam asyaam</string>
    <string name="sankalpam_srardham_end_2">(Prachinaviti) ............ Gothranaam, Vasurudra adithya swaroopanam asmad pithru pithamaha prapitamahaanam --- (if mother alive) pithamahi, pithu-pithamahi pithu-prapitaamahi (or else) (if mother not alive) matuhu, pithamahi, pithu-pithamahi, (mother’s gothram) ............ Gothranaam, sapatneeka, mathamaha, mathu-pithaamaha, mathu-prapithaamaha naam ubhaya vamsha pithrunaam akshayya thripthyartham</string>
    <string name="sankalpam_srardham_end_3">punya kale Darsha Shrardham hiranya roopena adhya karishye</string>
    <string name="sankalpam_shubam_end">evam guna visheshana vishishtayaam asyaam #### shubha thithou asmaakam, sarveshaam, sakudumbanaam, kshema, sthairya, veerya, vijaya, ayur arogya, aishwarya, abhivriddhyartham, mama gruhe mahalakshmi nitya nivaasa siddhyartham, mama ishta kaamya phala siddhyartham, mama vyaapaara, vyavahaara, udyoga abhivriddhi siddhyartham samastha mangala avaapthyartham, sharire vartamaanakaala varthishyamaana sakala rogha parihara dwara kshipra arogya saukhya siddhyartham</string>
    <string name="gkm_copyright">© GKM Heritage Creations, 2022</string>
    <string name="settings_title" translatable="false">Settings</string>
    <string name="pref_np_locale_key" translatable="false">PREF_NP_LOCALE_KEY</string>
    <string name="pref_locale" translatable="false">Display Language</string>
    <string name="pref_def_locale" translatable="false">English</string>
    <string name="preferred_display_lang" translatable="false">Preferred Display Language</string>
    <string name="pref_panchangam_key" translatable="false">PREF_PANCHANGAM_KEY</string>
    <string name="pref_panchangam" translatable="false">Panchangam</string>
    <string name="pref_panchangam_type" translatable="false">Panchangam Type</string>
    <string name="pref_panchangam_drik_telugu_lunar" translatable="false">Telugu Panchangam (Lunar)</string>
    <string name="pref_panchangam_drik_kannada_lunar" translatable="false">Kannada Panchangam (Lunar)</string>
    <string name="pref_panchangam_drik_luni_solar" translatable="false">Drik Ganitham (Luni-Solar)</string>
    <string name="pref_panchangam_tamil_vakyam" translatable="false">Tamil Vakyam (Luni-Solar)</string>
    <string name="pref_def_panchangam" translatable="false">@string/pref_panchangam_drik_luni_solar</string>
    <string name="pref_location_settings_key" translatable="false">PREF_LOCATION_SETTINGS_KEY</string>
    <string name="pref_location" translatable="false">Location</string>
    <string name="pref_location_type_details" translatable="false">Location Settings</string>
    <string name="pref_location_manual" translatable="false">Manual Selection (Recommended)</string>
    <string name="pref_location_gps" translatable="false">GPS Location (Permissions Required)</string>
    <string name="pref_location_def_val_key" translatable="false">PREF_LOCATION_DEF_VAL_KEY</string>
    <string name="pref_def_location" translatable="false">Location Details</string>
    <string name="pref_def_location_val" translatable="false">Varanasi, India</string>
    <string name="pref_def_location_type_details" translatable="false">Manual Location Selection</string>
    <string name="pref_sankalpam_type_key" translatable="false">PREF_SANKALPAM_TYPE_KEY</string>
    <string name="pref_sankalpam" translatable="false">Sankalpam</string>
    <string name="pref_sankalpam_details" translatable="false">Sankalpam Type</string>
    <string name="pref_sankalpam_type_shubam" translatable="false">Shubham</string>
    <string name="pref_sankalpam_type_srardham" translatable="false">Sraardham</string>
    <string name="pref_def_sankalpam_type" translatable="false">@string/pref_sankalpam_type_shubam</string>
    <string name="pref_ayanamsa_chitrapaksha" translatable="false">Chitrapaksha</string>
    <string name="pref_ayanamsa_lahiri" translatable="false">Lahiri</string>
    <string name="pref_ayanamsa_krishnamurti" translatable="false">Krishnamurti</string>
    <string name="pref_def_ayanamsa" translatable="false">@string/pref_ayanamsa_chitrapaksha</string>
    <string name="pref_lunar_calendar_key" translatable="false">PREF_CHAANDRAMANA_CALENDAR_KEY</string>
    <string name="pref_lunar_calendar" translatable="false">Chāndramānam (Lunar Calendar)</string>
    <string name="pref_lunar_calendar_type" translatable="false">Chāndramānam Type</string>
    <string name="pref_lunar_calendar_type_amanta" translatable="false">Amanta</string>
    <string name="pref_lunar_calendar_type_purnimanta" translatable="false">Purnimanta</string>
    <string name="pref_def_lunar_calendar_type" translatable="false">@string/pref_lunar_calendar_type_amanta</string>
    <string-array name="locale_list">
        <item>Tamil</item>
        <item>Sanskrit</item>
        <item>IAST</item>
        <item>Telugu</item>
        <item>Malayalam</item>
        <item>Kannada</item>
        <item>Hindi</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_allowed_panchangam_list">
        <item>@string/pref_panchangam_drik_luni_solar</item>
        <item>@string/pref_panchangam_tamil_vakyam</item>
        <item>@string/pref_panchangam_drik_telugu_lunar</item>
        <item>@string/pref_panchangam_drik_kannada_lunar</item>
    </string-array>
    <string-array name="pref_allowed_ayanamsa_list">
        <item>@string/pref_ayanamsa_chitrapaksha</item>
        <item>@string/pref_ayanamsa_lahiri</item>
        <item>@string/pref_ayanamsa_krishnamurti</item>
    </string-array>
    <string-array name="pref_location_settings">
        <item>@string/pref_location_manual</item>
        <item>@string/pref_location_gps</item>
    </string-array>
    <string-array name="pref_sankalpam_type_list">
        <item>@string/pref_sankalpam_type_shubam</item>
        <item>@string/pref_sankalpam_type_srardham</item>
    </string-array>
    <string-array name="pref_lunar_calendar_type_list">
        <item>@string/pref_lunar_calendar_type_amanta</item>
        <item>@string/pref_lunar_calendar_type_purnimanta</item>
    </string-array>
    <string-array name="pref_timeformat_list">
        <item>@string/pref_timeformat_hhmm</item>
        <item>@string/pref_timeformat_nazhigai</item>
    </string-array>
    <string name="samvatsaram_heading">Samvatsaram (Year)</string>
    <string name="aayanam_heading">Ayanam (6-month cycle)</string>
    <string name="rithou_heading">Rithu (Season)</string>
    <string name="sauramanam_maasam_heading">Maasam (Solar Month)</string>
    <string name="chaandra_maasam_heading">Maasam (Lunar Month)</string>
    <string name="paksham_heading">Paksham (15-day cycle)</string>
    <string name="tithi_heading">Tithi (Lunar Day)</string>
    <string name="vaasaram_heading">Vaasaram (Weekday)</string>
    <string name="raasi_heading">Raasi (Planet)</string>
    <string name="nakshatram_heading">Nakshatram (Star)</string>
    <string name="yogam_heading">Yogam (Time)</string>
    <string name="karanam_heading">Karanam (Half-Tithi)</string>
    <string name="good_time_heading">Good Time</string>
    <string name="raahu_kaalam_heading">Raahu Kaalam</string>
    <string name="emakandam_heading">Yamagandam</string>
    <string name="kuligai_heading">Gulikai</string>
    <string name="panchangam_tab_heading">Panchangam</string>
    <string name="sankalpam_tab_heading">Sankalpam</string>
    <string name="alarm_tab_heading">Alarm</string>
    <string name="splash_screen_banner">Swamiye Saranam Ayyappa</string>
    <string name="lagnam_heading">Lagnam</string>
    <string name="splash_logo" translatable="false">Splash Logo</string>
    <string name="scroll_calendar_left" translatable="false">Prev</string>
    <string name="scroll_calendar_right" translatable="false">Next</string>
    <string name="planet_sun">Sun</string>
    <string name="planet_mon">Mon</string>
    <string name="planet_tue">Tue</string>
    <string name="planet_wed">Wed</string>
    <string name="planet_thu">Thu</string>
    <string name="planet_fri">Fri</string>
    <string name="planet_sat">Sat</string>
    <string name="enter_preferred_location">Enter a preferred location:</string>
    <string name="dismiss_alarm">Dismiss</string>
    <string name="snooze_alarm">Snooze</string>
    <string name="select_repeat_option">Select Repeat Option</string>
    <string name="repeat_once">Once</string>
    <string name="repeat_daily">Daily</string>
    <string name="repeat_custom">Custom</string>
    <string name="repeat_every_occurrence">Every Occurrence</string>
    <string name="repeat_sunday">Sunday</string>
    <string name="repeat_monday">Monday</string>
    <string name="repeat_tuesday">Tuesday</string>
    <string name="repeat_wednesday">Wednesday</string>
    <string name="repeat_thursday">Thursday</string>
    <string name="repeat_friday">Friday</string>
    <string name="repeat_saturday">Saturday</string>
    <string name="location_selection">Location Selection!</string>
    <string name="lagnam_details">Dhina Lagnams</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
</resources>