<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/saffron_background_rr_corner">

    <LinearLayout
        android:id="@+id/np_top_heading"
        android:orientation="horizontal"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/np_calendar_prevYear"
            android:src="@drawable/ic_calendar_prev"
            android:contentDescription="@string/scroll_calendar_left"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <ImageView
            android:id="@+id/np_calendar_prevMonth"
            android:src="@drawable/ic_calendar_prev_small_arrow"
            android:contentDescription="@string/scroll_calendar_left"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/np_calendar_title"
            android:layout_marginTop="2dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="center"
            android:text=""
            android:textColor="@color/maroon"
            android:textSize="20sp"
            android:maxLines="3" />

        <ImageView
            android:id="@+id/np_calendar_nextMonth"
            android:src="@drawable/ic_calendar_next_small_arrow"
            android:contentDescription="@string/scroll_calendar_left"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <ImageView
            android:id="@+id/np_calendar_nextYear"
            android:src="@drawable/ic_calendar_next"
            android:contentDescription="@string/scroll_calendar_right"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_view"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/np_top_heading">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/planet_sun"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:maxLines="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/planet_mon"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:maxLines="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/planet_tue"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:maxLines="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/planet_wed"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:maxLines="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/planet_thu"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:maxLines="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/planet_fri"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:maxLines="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/planet_sat"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:maxLines="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_below="@id/calendar_view"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>